# dubhe-channel

./: .gitignore  ARCHITECTURE.md  CONFIG.md  Cargo.toml  README.md  RESEARCH_ENHANCEMENT copy.md  RESEARCH_ENHANCEMENT.md  TECHNICAL_ARCHITECTURE_STRATEGY.md  TPC_INCENTIVE_MECHANISM.md  VM_COMPARISON.md  analysis_prediction_accuracy.md  anti_fraud_ephemeral_validator.rs  config_phase1.toml  config_production_english.toml  dubhe_counter_config.toml  fraud_detection_demo.rs  fraud_detection_example.rs  nginx.conf  simple_counter_prediction
crates/adapter/: Cargo.toml
crates/adapter/src/: aptos.rs  btc.rs  eth.rs  lib.rs  solana.rs  sui.rs  sui_types.rs  traits.rs  types.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  grpc.rs  lib.rs  rpc.rs  types.rs  ws.rs
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs  loader_bench.rs  scheduler_bench.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: bft.rs  dag.rs  lib.rs  tpc.rs  tpc_hybrid.rs  types.rs
crates/loader/: Cargo.toml
crates/loader/src/: cache.rs  compiler.rs  dyn_lib.rs  error.rs  lib.rs  move_compiler.rs  types.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  lib.rs  main.rs  node.rs  offchain_execution.rs
crates/observability/: Cargo.toml
crates/observability/src/: alerts.rs  dashboards.rs  lib.rs  metrics.rs  tracing_ext.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: adaptive.rs  aptos_strategy.rs  conflict.rs  dispatcher.rs  error.rs  lib.rs  solana_strategy.rs  strategy.rs  sui_strategy.rs  types.rs
crates/security/: Cargo.toml
crates/security/src/: access_control.rs  audit_trail.rs  formal_verification.rs  key_management.rs  lib.rs  tee_integration.rs  threat_detection.rs
crates/state/: Cargo.toml
crates/state/src/: indexer.rs  lib.rs  storage.rs  types.rs  zero_copy_sync.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/vm-runtime/: Cargo.toml
crates/vm-runtime/src/: ckb.rs  ckb_complete.rs  error.rs  lib.rs  polka.rs  predictive_execution.rs  traits.rs  types.rs
examples/: Cargo.toml  counter_end_to_end_test.rs  counter_predictive_demo.rs  full_integration_demo.rs  fully_onchain_game_analysis.rs  game_predictive_engine.rs  move_to_riscv_demo.rs  phase1_offchain_demo.rs  real_testnet_demo.rs  real_testnet_simple.rs  simple_counter_demo.rs  simple_counter_prediction.rs  simple_onchain_game_analysis.rs  sui_example.rs  sui_metadata_loader.rs  true_end_to_end_demo.rs  working_counter_demo.rs
move-contracts/counter/: counter_creation.json  counter_id.txt  deployment.json  package_id.txt
move-contracts/counter/scripts/: deploy_and_test.sh
move-contracts/counter/sources/: counter.move
scripts/: connection_monitor.sh  setup_websocket_optimization.sh
tests/: integration_test.rs  phase1_integration_test.rs
