[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/adapter",
    "crates/loader",
    "crates/scheduler",
    "crates/vm-runtime",
    "crates/state",
    "crates/consensus",
    "crates/node",
    "crates/bench",
    "crates/security",
    "crates/observability",
    "crates/testing",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dubhe-channel/dubhe-channel"
homepage = "https://github.com/dubhe-channel/dubhe-channel"
documentation = "https://docs.rs/dubhe-channel"
description = "Dubhe Channel: Off-chain execution layer with dynamic mainchain loading and parallel execution"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking & RPC
hyper = { version = "0.14", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
tonic = "0.10"
prost = "0.11"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
ws = "0.9"

# Database & Storage
rocksdb = "0.22"
# paritydb = "0.4"  # 暂时注释，等待依赖可用

# Cryptography (临时注释，解决 edition2024 问题)
# sha2 = "0.9"
# sha3 = "0.10"
# secp256k1 = "0.28"
# ed25519-dalek = "2.0"

# RISC-V VM
# polkavm = "0.4"
# ckb-vm = "0.24"

# Blockchain clients
ethers = "2.0"
# solana-client = "1.17"
# aptos-sdk = "2.2"
# sui-sdk = "0.53"

# Parallel execution
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
arc-swap = "1.6"

# Dynamic loading
libloading = "0.8"
dlopen = "0.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
uuid = { version = "1.5", features = ["v4"] }

# Testing & Benchmarking
criterion = "0.5"
proptest = "1.4"

# Additional dependencies
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
num_cpus = "1.16"
toml = "0.8"
