[package]
name = "dubhe-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Dubhe Channel Node: Complete execution node binary"

[[bin]]
name = "dubhe-node"
path = "src/main.rs"

[[bin]]
name = "config-validator"
path = "src/bin/config_validator.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

# Internal dependencies
dubhe-api = { path = "../api" }
dubhe-adapter = { path = "../adapter" }
dubhe-loader = { path = "../loader" }
dubhe-scheduler = { path = "../scheduler" }
dubhe-vm-runtime = { path = "../vm-runtime" }

# Additional dependencies for Phase 1
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
