[package]
name = "dubhe-vm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Dubhe Channel VM Runtime: RISC-V VM abstraction layer (CKB-VM primary)"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# RISC-V VMs - CKB-VM as primary choice for production readiness
ckb-vm = { version = "0.24", optional = true }
# polkavm = { version = "0.4", optional = true }  # Future consideration

# Utilities
bytes = "1.5"
bincode = { workspace = true }

# Internal dependencies
dubhe-loader = { path = "../loader" }

[features]
default = ["ckb-vm"]
ckb-vm = ["dep:ckb-vm"] # CKB-VM support (recommended for production)
polkavm = []            # PolkaVM support (experimental)
cartesi = []            # Cartesi support (future)
